--- a/CsvWrangler.UnitTests/CsvWrangler.UnitTests.csproj
+++ b/CsvWrangler.UnitTests/CsvWrangler.UnitTests.csproj
@@ -58,9 +58,12 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="CsvWranglerTestsSteps.cs" />
+    <Compile Include="ITestItemInterface.cs" />
+    <Compile Include="ReadTestsSteps.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestReadCsv.cs" />
+    <Compile Include="TestWriteCsv.cs" />
+    <Compile Include="WriteTestSteps.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
