--- a/CsvWrangler/CsvWrangler.csproj
+++ b/CsvWrangler/CsvWrangler.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="CsvReader.cs" />
     <Compile Include="CsvRow.cs" />
+    <Compile Include="CsvWriter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringExtensions.cs" />
   </ItemGroup>
