Make sure that reader reads sequentially, not all at once; Restructure test to move test of the CsvRow behavior in to separate class; Get full code coverage

--- a/CsvWrangler.UnitTests/CsvWrangler.UnitTests.csproj
+++ b/CsvWrangler.UnitTests/CsvWrangler.UnitTests.csproj
@@ -61,6 +61,7 @@
     <Compile Include="ITestItemInterface.cs" />
     <Compile Include="ReadTestsSteps.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestCsvRow.cs" />
     <Compile Include="TestReadCsv.cs" />
     <Compile Include="TestWriteCsv.cs" />
     <Compile Include="WriteTestSteps.cs" />
