--- a/CsvWrangler.UnitTests/CsvWrangler.UnitTests.csproj
+++ b/CsvWrangler.UnitTests/CsvWrangler.UnitTests.csproj
@@ -59,6 +59,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="ITestItemInterface.cs" />
+    <Compile Include="ParserTest.cs" />
     <Compile Include="ReadTestsSteps.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestCsvRow.cs" />
