Modify writer to read data items one by one from the input stream.

--- a/CsvWrangler/CsvWrangler.csproj
+++ b/CsvWrangler/CsvWrangler.csproj
@@ -50,6 +50,7 @@
     <Compile Include="CsvRow.cs" />
     <Compile Include="CsvWriter.cs" />
     <Compile Include="CsvWriterOptions.cs" />
+    <Compile Include="StringListStream.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringExtensions.cs" />
   </ItemGroup>
