--- a/CsvWrangler.UnitTests/CsvWrangler.UnitTests.csproj
+++ b/CsvWrangler.UnitTests/CsvWrangler.UnitTests.csproj
@@ -62,7 +62,9 @@
     <Compile Include="ParserTest.cs" />
     <Compile Include="ReadTestsSteps.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringListStreamTests.cs" />
     <Compile Include="TestCsvRow.cs" />
+    <Compile Include="TestItemGenerator.cs" />
     <Compile Include="TestReadCsv.cs" />
     <Compile Include="TestWriteCsv.cs" />
     <Compile Include="WriteTestSteps.cs" />
