--- a/CsvWrangler.Core/CsvWrangler.Core.csproj
+++ b/CsvWrangler.Core/CsvWrangler.Core.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>CsvWrangler</AssemblyName>
     <RootNamespace>CsvWrangler</RootNamespace>
     <Version>1.0.3</Version>
